--- a/data/templates/html_tooltip_template.html
+++ b/data/templates/html_tooltip_template.html
@@ -1,1 +1,1 @@
-<span class="tooltip">{{context.word}}<span class="tooltiptext">{{context.tooltip}}</span></span>
+<a href="{{context.link}}" target="_blank" class="tooltip">{{context.word}}<span class="tooltiptext">{{context.tooltip}}</span></a>
