annotate already processed latex

--- a/data/templates/html_tooltip_template.html
+++ b/data/templates/html_tooltip_template.html
@@ -1,1 +1,1 @@
-<a href="{{context.link}}" target="_blank" class="tooltip">{{context.word}}<span class="tooltiptext">{{context.tooltip}}</span></a>
+<a href="{{context.short_key}}.html" target="_blank" class="tooltip">{{context.word}}<span class="tooltiptext"><iframe src="{{context.short_key}}.html"></iframe></span></a>
