--- a/data/templates/markup_complete_template.html
+++ b/data/templates/markup_complete_template.html
@@ -187,12 +187,12 @@
 <b>Snippet {{snippet.snippet}}</b>
 <div class="toggle-container">
     <div class="content-box"></div>
-    <button class="toggle-btn">Show FNL</button>
+    <button class="toggle-btn">FNL</button>
 
-    <div class="state" data-button="Show FNL">
+    <div class="state" data-button="FNL">
 {{snippet.tex}}
     </div>
-    <div class="state" data-button="Show PyIRK">
+    <div class="state" data-button="PyIRK">
         <div class="markdown-block">
             <textarea class="markdown-source">
 {{snippet.fnl}}
@@ -201,7 +201,7 @@
         </div>
 
     </div>
-    <div class="state" data-button="Show TeX">
+    <div class="state" data-button="TeX">
         <pre><code class="language-python">
 {{snippet.pyirk}}
         </code></pre>
