--- a/data/templates/html_equation_info_template.html
+++ b/data/templates/html_equation_info_template.html
@@ -1,12 +1,12 @@
 <span class="tooltip">
   <img src="{{context.img_path}}" alt="info" width="10" height="10">
   <span class="tooltiptext-contains">
-    Concepts in this expression:
+    <b>Concepts in this expression:</b>
     {{context.concepts}}
 
     {% if context.statement %}
     <br>
-    Formalized expression:
+    <b>Formalized expression:</b>
     {{context.statement}}
     {% endif %}
   </span>
