--- a/data/templates/markup_complete_template.html
+++ b/data/templates/markup_complete_template.html
@@ -69,7 +69,6 @@
         position: relative;
         cursor: pointer;
         color: #0066cc;
-        font-weight: 500;
     }
 
     .tooltip .tooltiptext,
@@ -122,10 +121,10 @@
     }
 
     .inner-tooltip {
-        color: #ff9800;
+        color: #0066cc;
         cursor: help;
-        font-weight: 600;
         position: relative;
+        font-weight: 100;
     }
 
     /* Markdown output */
@@ -162,6 +161,17 @@
         align-items: center;
         gap: 6px;
     }
+    a {
+        text-decoration: none;
+    }
+    .concept {
+        background: rgb(255, 208, 56);
+        padding-top: 1px;
+        padding-right: 5px;
+        padding-bottom: 1px;
+        padding-left: 5px;
+    }
+
 </style>
 <!-- Code highlighting -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/atom-one-dark.min.css">
