--- a/data/templates/html_tooltip_template.html
+++ b/data/templates/html_tooltip_template.html
@@ -1,5 +1,5 @@
 {% if context.inner %}
-<a href="{{context.short_key}}.html" target="_blank" class="inner-tooltip">{{context.word}}<span class="inner-tooltiptext"><iframe src="{{context.short_key}}.html"></iframe></span></a>
+<span class="concept"><a href="{{context.short_key}}.html" target="_blank" class="inner-tooltip">{{context.word}}<span class="inner-tooltiptext"><iframe src="{{context.short_key}}.html"></iframe></span></a></span>
 {% else %}
 <a href="{{context.short_key}}.html" target="_blank" class="tooltip">{{context.word}}<span class="tooltiptext"><iframe src="{{context.short_key}}.html"></iframe></span></a>
 {% endif %}
